[JBPAPP-8737] Merged revisions 16182 via svnmerge from https://svn.jboss.org/repos/jbossws/stack/native/trunk
........
  r16182 | ropalka | 2012-04-19 06:47:36 +0200 (Thu, 19 Apr 2012) | 1 line
  
  [JBWS-3486] removing endorsed module
........


git-svn-id: https://anonsvn.jboss.org/repos/jbossws/stack/native/branches/jbossws-native-4.0.x@16198 50344849-fb0f-0410-a53f-a94597aac05c